Fixed padding in footer to prevent horizontal scroll

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -231,7 +231,7 @@ aside {
 
 footer {
     margin: 0 auto;
-    padding: 2rem;
+    padding: 2rem 0;
     width: 90vw;
     width: clamp(16rem, 90vw, 50rem);
     text-align: center;
